--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <section class="search">
          <h1>Trouvez votre hébergement pour des vacances de rêve
          <span class="search_subtitle">En centre ville ou en pleine nature</span></h1>
-         <form>
-           <div class="search_bar">
+         <form class="search_bar">
             <i class="fas fa-map-marker-alt searchicon"></i>    
             <input class="place_search" type="search" placeholder="Marseille, France">
             <button class="search_button">
