--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 <!-- HEADER -->
-    <header>
+    <header class="flex-wrap">
         <img class="logo" src="./images/Reservia.svg" alt="Logo de Reservia">
-        <nav class="headernav">
+        <nav class="headernav align-center">
          <a href="#hosting">Hébergements</a>
          <a href="#activity">Activités</a>
         </nav>
@@ -29,7 +29,7 @@
         <section class="search">
          <h1>Trouvez votre hébergement pour des vacances de rêve
          <span class="search_subtitle">En centre ville ou en pleine nature</span></h1>
-         <form class="search_bar">
+         <form class="search_bar flex">
             <i class="fas fa-map-marker-alt searchicon"></i>    
             <input class="place_search" type="search" placeholder="Marseille, France">
             <button class="search_button">
@@ -38,36 +38,36 @@
             </button>
          </form>
          <!-- FILTERS -->
-         <div class="search_filters">
-            <h2 class="filter_title">Filtres</h2>
-            <div class="filter">
-              <div class="filters_icons">
+         <div class="search_filters flex-wrap">
+            <h2 class="filter_title align-center">Filtres</h2>
+            <div class="align-center filter ">
+              <div class="filters_icons align-justify-center">
                <i class="fas fa-money-bill-wave filter_icon"></i>
               </div>
                <span class="Filter_name">Économique</span>
             </div>
-            <div class="filter">
-              <div class="filters_icons">
+            <div class="filter align-center">
+              <div class="filters_icons align-justify-center">
                <i class="fas fa-child filter_icon"></i>
               </div>
                <span class="Filter_name">Familial</span>
             </div>
-            <div class="filter">
-              <div class="filters_icons">
+            <div class="filter align-center">
+              <div class="filters_icons align-justify-center">
                <i class="fas fa-heart filter_icon"></i>
               </div>
                <span class="Filter_name">Romantique</span>
             </div>
-            <div class="filter">
-              <div class="filters_icons">
+            <div class="filter align-center">
+              <div class="filters_icons align-justify-center">
                <i class="fas fa-dog filter_icon"></i>
               </div>
                <span class="Filter_name">Animaux autorisés</span>
             </div>         
          </div>
          <!-- /FILTERS -->
-         <div class="info_availability">
-             <div class="info_availability_icon">
+         <div class="info_availability align-center">
+             <div class="info_availability_icon align-justify-center">
               <i class="fas fa-info info_icon"></i>
              </div>
              <p class="info_availability_text">Plus de 500 de logements sont disponibles dans cette ville.</p>
@@ -77,9 +77,9 @@
 
         <!-- HOSTING -->
         <div id="hosting">
-          <section class="hostingmain">
+          <section class="hostingmain flex-wrap">
             <h2>Hébergements à Marseille</h2>
-              <div class="hostingcards">
+              <div class="hostingcards flex-wrap">
                 <article class="card">
                   <a href="#">
                     <figure>
@@ -202,15 +202,15 @@
           </section>
             <!-- POPULAR -->
           <section class="popularmain">
-            <h2 class="populartitle">Les plus populaire <i class="fas fa-chart-line"></i></h2> 
-            <div class="popular_cards">
-              <article class="popularcard">
-                <figure class="popularfigure">
+            <h2 class="populartitle flex">Les plus populaire <i class="fas fa-chart-line"></i></h2> 
+            <div class="popular_cards flex-wrap">
+              <article class="popularcard flex">
+                <figure class="popularfigure flex">
                   <a href="#">
                    <img class="popularcard__image" src="./images/hosting/small/hotel-le-soleil-du-matin.jpg" alt="Chambre avec lit double et mirroir au mur et au plafond">
                   </a>
-                  <figcaption class="popularcard_content">
-                    <a class="popular_link" href="#">
+                  <figcaption class="popularcard_content flex">
+                    <a class="popular_link flex" href="#">
                       <h3 class="card__title">Hôtel Le soleil du matin</h3>
                       <p class="popularcard__price">Nuit à partir de 128<span class="price">€</span></p>
                       <div class="popularcard__grade">
@@ -225,13 +225,13 @@
                 </figure>
               </article>
     
-              <article class="popularcard">
-                <figure class="popularfigure">
+              <article class="popularcard flex">
+                <figure class="popularfigure flex">
                   <a href="#">
                    <img class="popularcard__image" src="./images/hosting/small/au-coeur-de-l-eau.jpg" alt="Chambre avec lit double et mezzanine">
                   </a>
-                  <figcaption class="popularcard_content">
-                    <a class="popular_link" href="#">
+                  <figcaption class="popularcard_content flex">
+                    <a class="popular_link flex" href="#">
                       <h3 class="card__title">Au coeur de l'eau Chambres d'hôtes</h3>
                       <p class="popularcard__price">Nuit à partir de 71<span class="price">€</span></p>
                       <div class="popularcard__grade">
@@ -246,13 +246,13 @@
                 </figure>
               </article>
     
-              <article class="popularcard">
-                <figure class="popularfigure">
+              <article class="popularcard flex">
+                <figure class="popularfigure flex">
                   <a href="#">
                    <img class="popularcard__image" src="./images/hosting/small/hotel-tout-blanc-et-bleu.jpg" alt="Chambre avec lit double">
                   </a>
-                  <figcaption class="popularcard_content">
-                    <a class="popular_link" href="#">
+                  <figcaption class="popularcard_content flex">
+                    <a class="popular_link flex" href="#">
                       <h3 class="card__title">Hôtel Tout Bleu et Blanc</h3>
                       <p class="popularcard__price">Nuit à partir de 68<span class="price">€</span></p>
                       <div class="popularcard__grade">
@@ -274,7 +274,7 @@
         <!-- ACTIVITY -->
         <section class="activity" id="activity">
           <h2 class="activityTitle">Activités à Marseille</h2>   
-          <figure class="activityCard activityCard1">
+          <figure class="activityCard flex activityCard1">
             <div class="activityCard__wrapimage">
               <a href="#">
                 <img class="activityCard__image"
@@ -289,7 +289,7 @@
             </figcaption>
           </figure>
 
-          <figure class="activityCard activityCard2">
+          <figure class="activityCard flex activityCard2">
             <div class="activityCard__wrapimage">
               <a href="#">
                 <img class="activityCard__image"
@@ -304,7 +304,7 @@
             </figcaption>
           </figure>
 
-          <figure class="activityCard activityCard3">
+          <figure class="activityCard flex activityCard3">
             <div class="activityCard__wrapimage">
               <a href="#">
                 <img class="activityCard__image"
@@ -319,7 +319,7 @@
             </figcaption>
           </figure>
 
-          <figure class="activityCard activityCard4">
+          <figure class="activityCard flex activityCard4">
             <div class="activityCard__wrapimage">
               <a href="#">
                 <img class="activityCard__image"
@@ -334,7 +334,7 @@
             </figcaption>
           </figure>
 
-          <figure class="activityCard activityCard5">
+          <figure class="activityCard flex activityCard5">
             <div class="activityCard__wrapimage">
               <a href="#">
                 <img class="activityCard__image"
@@ -348,7 +348,7 @@
             </figcaption>
           </figure>
 
-          <figure class="activityCard activityCard6">
+          <figure class="activityCard flex activityCard6">
             <div class="activityCard__wrapimage">
               <a href="#">
                 <img class="activityCard__image"
@@ -366,7 +366,7 @@
     </main>
     <footer>
      <nav>
-      <div class="footer_container">
+      <div class="footer_container flex-wrap">
         <div class="footer_content">
           <h3 class="footer_title">A propos</h3>
           <ul>
